# sub-xyk

node/src/: chain_spec.rs
pallets/xyk/: Cargo.toml
pallets/xyk/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
